--- a/src/main/resources/templates/client/layout/subtitle.html
+++ b/src/main/resources/templates/client/layout/subtitle.html
@@ -20,7 +20,7 @@
                   class="btn hero-btn"
                   data-animation="fadeInLeft"
                   data-delay="0.7s"
-                  >Tham gia miễn phí</a
+                  >Tham gia ngay</a
                 >
               </div>
             </div>
