--- a/src/main/resources/templates/admin/class/addStudent.html
+++ b/src/main/resources/templates/admin/class/addStudent.html
@@ -46,23 +46,32 @@
                 </a>
               </li>
             </ol>
-            <div class="mt-4">
+            <div class="mt-4" sec:authorize="hasRole('ACADEMIC_AFFAIRS')">
               <div class="row">
-                <form th:action="@{/admin/class/student/add/{id}(id=${currentClass.id})}" method="post">
+                <form
+                  th:action="@{/admin/class/student/add/{id}(id=${currentClass.id})}"
+                  method="post"
+                >
                   <!-- Chọn học sinh -->
                   <div class="mb-3">
                     <label class="form-label">Email học sinh:</label>
-                    <input type="email"
-                           class="form-control"
-                           name="email"
-                           placeholder="Nhập email học sinh"
-                           required 
-                           autocomplete="off"/>
-                  
+                    <input
+                      type="email"
+                      class="form-control"
+                      name="email"
+                      placeholder="Nhập email học sinh"
+                      required
+                      autocomplete="off"
+                    />
+
                     <!-- Hiển thị lỗi -->
-                    <div th:if="${error}" class="text-danger mt-1" th:text="${error}"></div>
+                    <div
+                      th:if="${error}"
+                      class="text-danger mt-1"
+                      th:text="${error}"
+                    ></div>
                   </div>
-                
+
                   <!-- Nút -->
                   <button type="submit" class="btn btn-primary">
                     Thêm học sinh
@@ -75,11 +84,23 @@
             <div class="mt-5">
               <h5>Danh sách học sinh trong lớp</h5>
               <!-- Form tìm kiếm -->
-              <form th:action="@{/admin/class/student/add/{id}(id=${currentClass.id})}" method="get" class="mb-3">
-                <div class="input-group" style="max-width: 300px;">
-                  <input type="text" name="student.fullName" class="form-control" placeholder="Tìm theo tên"
-                         th:value="${name}" autocomplete=off>
-                  <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+              <form
+                th:action="@{/admin/class/student/add/{id}(id=${currentClass.id})}"
+                method="get"
+                class="mb-3"
+              >
+                <div class="input-group" style="max-width: 300px">
+                  <input
+                    type="text"
+                    name="student.fullName"
+                    class="form-control"
+                    placeholder="Tìm theo tên"
+                    th:value="${name}"
+                    autocomplete="off"
+                  />
+                  <button type="submit" class="btn btn-primary">
+                    Tìm kiếm
+                  </button>
                 </div>
               </form>
               <table class="table table-bordered table-striped">
@@ -88,7 +109,11 @@
                     <th>#</th>
                     <th>Họ và tên</th>
                     <th>Email</th>
-                    <th>Hành động</th>
+                    <th
+                      sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                    >
+                      Hành động
+                    </th>
                   </tr>
                 </thead>
                 <tbody>
@@ -96,7 +121,9 @@
                     <td th:text="${stat.count}"></td>
                     <td th:text="${cs.student.fullName}"></td>
                     <td th:text="${cs.student.email}"></td>
-                    <td>
+                    <td
+                      sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                    >
                       <form
                         th:action="@{/admin/class/student/delete/{classId}/{studentId}(classId=${currentClass.id}, studentId=${cs.student.id})}"
                         method="post"
@@ -111,43 +138,43 @@
                 </tbody>
               </table>
               <nav aria-label="Page navigation">
-                    <ul class="pagination justify-content-center">
-                      <li class="page-item">
-                        <a
-                          class="page-link"
-                          th:classappend="${currentPage == 1} ? ' disabled'"
-                          th:href="@{'/admin/class/student/add/{id}(id=${currentClass.id}, page=${currentPage - 1})}
+                <ul class="pagination justify-content-center">
+                  <li class="page-item">
+                    <a
+                      class="page-link"
+                      th:classappend="${currentPage == 1} ? ' disabled'"
+                      th:href="@{'/admin/class/student/add/{id}(id=${currentClass.id}, page=${currentPage - 1})}
 "
-                          aria-label="Previous"
-                        >
-                          <span aria-hidden="true">&laquo;</span>
-                        </a>
-                      </li>
-                      <li
-                        class="page-item"
-                        th:each="i : ${#numbers.sequence(1, totalPages)}"
-                      >
-                        <a
-                          class="page-link"
-                          th:classappend="${i == currentPage} ? ' active'"
-                          th:href="@{/admin/class/student/add/{id}(id=${currentClass.id}, page=${i})}"
-                          th:text="${i}"
-                          >1</a
-                        >
-                      </li>
-                      <li class="page-item">
-                        <a
-                          class="page-link"
-                          th:classappend="${currentPage == totalPages} ? ' disabled'"
-                          th:href="@{/admin/class/student/add/{id}(id=${currentClass.id}, page=${currentPage + 1})}
+                      aria-label="Previous"
+                    >
+                      <span aria-hidden="true">&laquo;</span>
+                    </a>
+                  </li>
+                  <li
+                    class="page-item"
+                    th:each="i : ${#numbers.sequence(1, totalPages)}"
+                  >
+                    <a
+                      class="page-link"
+                      th:classappend="${i == currentPage} ? ' active'"
+                      th:href="@{/admin/class/student/add/{id}(id=${currentClass.id}, page=${i})}"
+                      th:text="${i}"
+                      >1</a
+                    >
+                  </li>
+                  <li class="page-item">
+                    <a
+                      class="page-link"
+                      th:classappend="${currentPage == totalPages} ? ' disabled'"
+                      th:href="@{/admin/class/student/add/{id}(id=${currentClass.id}, page=${currentPage + 1})}
 "
-                          aria-label="Next"
-                        >
-                          <span aria-hidden="true">&raquo;</span>
-                        </a>
-                      </li>
-                    </ul>
-                  </nav>
+                      aria-label="Next"
+                    >
+                      <span aria-hidden="true">&raquo;</span>
+                    </a>
+                  </li>
+                </ul>
+              </nav>
             </div>
           </div>
         </main>
