--- a/src/main/resources/templates/admin/test/detail.html
+++ b/src/main/resources/templates/admin/test/detail.html
@@ -65,7 +65,11 @@
                         <th>Email</th>
                         <th>Điểm</th>
                         <th>Thời gian nộp</th>
-                        <th>Hành động</th>
+                        <th
+                          sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                        >
+                          Hành động
+                        </th>
                       </tr>
                     </thead>
                     <tbody>
@@ -79,7 +83,9 @@
                         <td
                           th:text="${#temporals.format(res.submittedAt, 'dd/MM/yyyy HH:mm')}"
                         ></td>
-                        <td>
+                        <td
+                          sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                        >
                           <a
                             th:href="@{'/admin/test/result/' + ${res.id} + '?testId=' + ${id}}"
                             class="btn btn-danger btn-sm"
