--- a/src/main/resources/templates/admin/test/show.html
+++ b/src/main/resources/templates/admin/test/show.html
@@ -39,7 +39,11 @@
                     class="d-flex justify-content-between align-items-center"
                   >
                     <h3>Danh sách ca thi</h3>
-                    <a th:href="@{/admin/test/create}" class="btn btn-primary">
+                    <a
+                      th:href="@{/admin/test/create}"
+                      class="btn btn-primary"
+                      sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
+                    >
                       + Tạo ca thi
                     </a>
                   </div>
@@ -94,11 +98,13 @@
                             >Xem</a
                           >
                           <a
+                            sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
                             th:href="@{'/admin/test/update/' + ${examSession.id}}"
                             class="btn btn-warning btn-sm mx-1"
                             >Sửa</a
                           >
                           <a
+                            sec:authorize="hasAnyRole('ACADEMIC_AFFAIRS', 'PRINCIPAL')"
                             th:href="@{'/admin/test/delete/' + ${examSession.id}}"
                             class="btn btn-danger btn-sm"
                             >Xóa</a
